# RAT_Rust

.devcontainer/: Dockerfile  compose.yml  devcontainer.json
rat/: .gitignore  build.sh  env.example
rat/agent/: Cargo.toml
rat/agent/src/: install.rs
rat/client/: Cargo.toml
rat/common/: Cargo.toml
rat/server/: Cargo.toml
shellcode/: build.sh
shellcode/hello_world/src/: main.rs
